# ChangeLog for media-libs/taglib-extras
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/taglib-extras/ChangeLog,v 1.13 2014/09/23 13:34:33 kensington Exp $

  23 Sep 2014; Michael Palimaka <kensington@gentoo.org>
  taglib-extras-1.0.1.ebuild:
  Update SRC_URI wrt bug #523500.

  18 Jan 2011; Brent Baude <ranger@gentoo.org> taglib-extras-1.0.1.ebuild:
  Marking taglib-extras-1.0.1 ppc for bug 346233

  23 Feb 2010; Joseph Jezak <josejx@gentoo.org> taglib-extras-1.0.1.ebuild:
  Marked ~ppc.

  12 Jan 2010; Brent Baude <ranger@gentoo.org> taglib-extras-1.0.1.ebuild:
  Marking taglib-extras-1.0.1 ~ppc64 for bug 280552

  29 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  taglib-extras-1.0.1.ebuild:
  stable x86, bug 290487

  26 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  taglib-extras-1.0.1.ebuild:
  amd64 stable wrt #290487

*taglib-extras-1.0.1 (02 Oct 2009)

  02 Oct 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +taglib-extras-1.0.1.ebuild:
  Bumped taglib-extras to version 1.0.1 from the kde-testing overlay. Thanks
  to Maciej Mrozowski (reavertm).

*taglib-extras-0.1.7 (11 Sep 2009)

  11 Sep 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +taglib-extras-0.1.7.ebuild:
  [taglib-extras] Bumped to version 0.1.7.

*taglib-extras-0.1.6 (10 Aug 2009)

  10 Aug 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +taglib-extras-0.1.6.ebuild:
  Bumped taglib-extras to 0.1.6.

*taglib-extras-0.1.5 (24 Jul 2009)

  24 Jul 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +taglib-extras-0.1.5.ebuild:
  Bumped taglib-extras to 0.1.5.

*taglib-extras-0.1.4 (26 Jun 2009)

  26 Jun 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +taglib-extras-0.1.4.ebuild:
  Version bump

  04 Jun 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  taglib-extras-0.1.3.ebuild:
  Bring slot back to 0

*taglib-extras-0.1.3 (04 Jun 2009)
