@@ -1,26 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST qpitch-1.0.1.tar.gz 116676 SHA256 20153417bf8e25dfd6e73c46ac5e05b7aaf5d4060b85a09778e0dcc61d4496a0
+DIST qpitch-1.0.1.tar.gz 116676 SHA256 20153417bf8e25dfd6e73c46ac5e05b7aaf5d4060b85a09778e0dcc61d4496a0 SHA512 d732d0b2a7c07741586d3724a6a2c73bb02b4390bbd4baa5e7fe4abe3531ad12e7be208a470ca6f0da38334e4cb556cebe5c0df3839547c3f55c5b37b9944e94 WHIRLPOOL 4e5a6d46d389e49837d73dd4d642ae5f84ad81d95bdc5a361b091607b09f5fd37aa411882148b3791d47d922ad553cb27cb57ecbfed741f9f2774af627b0453e
+EBUILD qpitch-1.0.1-r1.ebuild 641 SHA256 cbd2cadcd9517001f311ae7c26ef0a8c815db863b5994ff9d8ec65d24411a6db SHA512 5ebcbb72f8610f06aec79a42aa99f6e8fefd2083ad39a66fb9fd60b692110ebf33fef8deb133dfed55cb1dbcd6a661ecb67a4074dff8e668f4875e75b12bdaf1 WHIRLPOOL bf7c99e5d6b3dc6571281aae6a164a50b4519facbd96a793bf6096782a03ee18ae4255fa816f4ca72cb983d89e1cdcb627f9c661dba6e0a505dd2473037ad479
 EBUILD qpitch-1.0.1.ebuild 614 SHA256 21bef0ede3974cae6450b17ac312d134a9d6c9075f6795ed2d353c61280d93ff SHA512 7dd15b64111a4142ff28e30193bdb5ae2c6f052bae543571c506ee57a79231c5eda658fed85e21f196d9485cf31579042f3ebdbbcada3414827dd6ce135ac13c WHIRLPOOL 8e9c2b87dac3bc428fc668eadfd7bed732dbcb21572b9624fa35cd7beac543f0ecfdd7d23d112d927f915da836acdbeb4ebcff0196aef50f1f5f56feae68eed6
-MISC ChangeLog 1091 SHA256 5e2eaf38e10ef6d736015bd14addbbcf28b9709c7c78cc55d4414808bd3e5df0 SHA512 b67735f2f353736cf50d68d288cc5f61d0b61b08a348f5cda5d5e44aa1b7eac99c2c356d9155ea49b8e8676b8d6f8f0e7009f655d79694ac20361527b8688058 WHIRLPOOL 88a20ce928470799c7a05f994983b74842ec6bd879188935c2ee379df5bfc30e97dbd6c4fe96471849191f7b95d45921a150ab2490a272ff7f125a74a3c81eb7
-MISC metadata.xml 175 SHA256 e60fcd9c59d68f555776e4426b84b634f1a2ab995e890772c188a399ba8b2fc7 SHA512 053140b845a46014566f01f8006aa9eace714627af10f8a9f79f4a61b3802542b08b06132c864a2e5965c8ca1d2a8afd67b8e690e05401453f5eb238d6724ba6 WHIRLPOOL 27471a2f4750ac7288616442936b2f9313cb3917cb511ecf87fce67f5d4909d8e3af1e1c39ac4a1740dc6a19394e65f53f1fb4efa0a7be5276011bb5f6c6d972
+MISC ChangeLog 1220 SHA256 4eb010d74ef8ecd35b46ced56c982c346a18fcb5a6a72b3be883f98ad36e9bcd SHA512 58d01d205505019e849e845c2a55026b60458a7acb4d06a746929bde0b56a0cf947e6862c2cdc1ba6f507954395cd851c6f0260acc2f5ff6a053f5e66a7b85a5 WHIRLPOOL 6131c144c981b4c48c08cbffe2c8e75fc317ff0c0ec91bf504340fac076708ce48bfa511ea585885649529d2c00422ae01952ee22378e44b174d93b6a42f35e2
+MISC metadata.xml 176 SHA256 fd9c66ad3713c7dccabf2033b2694838e41aedb81ae40d13fb31ff473d1a0ccc SHA512 00d342e4f144d7af07203770722db78226160a9c00476ef3b3199e509d228bebb83b617d1cbbe25154127abbec7a154c292f1cc9c1c83603e3b47d69f28eb465 WHIRLPOOL e1923b61f52e3171edaee48d088c8aaa027ea356a1d98fbcb0929edc040871fca2b5137dd3baf50116b206875f2507607c17bc4220adf3d8f2ad18e55a28a763
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJRMnahXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun885e0P/jspKCDhC5/T2bZ//AqQW5OM
-O1fol8eQsWd87iEXddgKL3916YBs5ngIxA9PNj9/4y03Yee7E4JR5YcdhnDUliCi
-fRHIPdDpq+il7z6iArRzQItOJxWtzkOMCcZzF4w6+UtUS4rQyrAOwqpe7WRuf9DP
-iiWviWBapHLt6y5dVn5oEBXmc9unUzKwHkY/qVrVpOqMn5Tp4pxhbFmP/2l+ZTFm
-GojRx5+feSx3pP/wM6gY2luWvAhWEHM046NT3Q4tDNa8jqiW6VzVk88lx3EYQkTI
-bE8PN9wdCvcxMNqoc5xVRMvb7pahRF4K9NoGdT+BuTqOWdAKPy6jX1DF4hok5S/S
-UOgkpStHiGqZY0d4Y/5fS/tGuo4VNUq2ymkxNZu7JJ2oLNur3RJo6qN5k6q1rg67
-MFLbFaF6ZXPNsG7HL4RmBpyVlqXbfD1JUysRVWebIwycb0hPfTpHcpPv1sCa7Wby
-AfjWwsoq4KVdrWHak46XkKXm7+DSMzolh7omjAJIXmjlbxO0igmIDuwWehubT1L0
-XunU2NAyDo/eql9mChIuvVHlFKwoX962jFmHTg1UAym0Jr+Xs/qopv3nxIGStwrU
-S3nr57LQxm1DJBPCO35BvCjwZa5rAFN5rAz8prkgSULRMfk/vwOegyznUIOaJvkA
-7qOk97OJMBfffa9outc4
-=lwGV
+iQJiBAEBCABMBQJVHWLsRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7BYwD/0eUJg+3BB3sb1eJ38R2X0wqf/kvODzZMKAk5b8ELYPdShGKbkAAhyRWu9O
+5Fyg9tAzsOoE2f1Bm/UurFsKsS1G8yuaOmIbKMISF8vkY7+W/RBufDqjX381I0az
+B/QbGU235FCnUv4svrUTi41irpxxSBz1Y0jImB78+dS9HbUIH5tUpErhkDGVZiPk
+4pemVvDkFZBS0FGGBuwLT6Hff/t8Ji960ygETzX0yb4+0KbGM7m7xmIbXOZplinn
+3xiLFUJeN3jrDj74LnQJropUN5tHK4OGI0PBQgarkGftP3OHZgB/XckMKNqtyACs
+yM3BQ6pOCxW0Hcqo0317KoUB5Gh1Y8YJcUqrxpDM8rLZ3efGjHzwZGWTWR9q7pol
+YUU7fCMeo1oWEdIXsALTHlvGkvQvGw42U1oFQnYPgWBzhpe8/MlIlURvhhPu3cil
+zJUveg+iszsuSZuj22Ntgr9zuXP8/fn3Fu/xpIilGoKZ3zMTtyP5xQjYfksLWRSa
++DEd2LYx+Dk3rrcJhEUCZBQjU4yycl5HkZKRhb9fLuRvdn2GGtfZ/pLWRZmdzMKu
+zuw42/f826/O3fucmk8mEVXm+t47uRqHd54TDCaHz2D8r6LzROGTCGuFm6N7bXZg
+VlOjA1f8Z0xz5nSCdaPMSYis5Iq8CMG7CyFwR7fT0kaP69UN6Q==
+=vjt1
 -----END PGP SIGNATURE-----
