@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test
-DEPEND=dev-libs/libxml2 media-libs/libpng media-libs/freeglut sys-libs/zlib virtual/jpeg x11-libs/libXmu x11-libs/libXt x11-libs/libXxf86vm sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
-DESCRIPTION=Panorama viewer (Quicktime, PangeaVR, GLPanoView formats)
-EAPI=2
-HOMEPAGE=http://freepv.sourceforge.net/
-KEYWORDS=amd64 x86
-LICENSE=LGPL-2.1
-RDEPEND=dev-libs/libxml2 media-libs/libpng media-libs/freeglut sys-libs/zlib virtual/jpeg x11-libs/libXmu x11-libs/libXt x11-libs/libXxf86vm
-SLOT=0
-SRC_URI=mirror://sourceforge/freepv/freepv-0.3.0.tar.gz
-_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
-_md5_=c196e904aaef73450e513e8efe3c8827
