@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=>=media-libs/taglib-1.6 sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=Unofficial taglib plugins maintained by the Amarok team
+EAPI=5
+HOMEPAGE=http://developer.kde.org/~wheeler/taglib.html
+IUSE=debug
+KEYWORDS=~amd64 ~ppc ~ppc64 ~x86
+LICENSE=GPL-2
+RDEPEND=>=media-libs/taglib-1.6
+SLOT=0
+SRC_URI=http://dev.gentoo.org/~kensington/distfiles/taglib-extras-1.0.1.tar.gz
+_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
+_md5_=17768eb149743740228a3d6beaa71816
