@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=dev-qt/qtcore:4 dev-qt/qtgui:4 >=media-libs/portaudio-19_pre20071207 >=sci-libs/fftw-3.1.0 sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=A program to tune musical instruments using Qt4
+EAPI=5
+HOMEPAGE=http://wspinell.altervista.org/qpitch/
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=dev-qt/qtcore:4 dev-qt/qtgui:4 >=media-libs/portaudio-19_pre20071207 >=sci-libs/fftw-3.1.0
+SLOT=0
+SRC_URI=http://download.gna.org/qpitch/releases/qpitch-1.0.1.tar.gz
+_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
+_md5_=d2f4efa3f5bdc2d59dc2cb1bd66fbfeb
