@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/freepv
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/freepv/ChangeLog,v 1.18 2014/06/14 10:00:34 phajdan.jr Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/freepv/ChangeLog,v 1.19 2015/04/02 15:51:39 kensington Exp $
+
+  02 Apr 2015; Michael Palimaka <kensington@gentoo.org> -freepv-0.3.0-r3.ebuild:
+  Remove old.
 
   14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> freepv-0.3.0-r4.ebuild:
   x86 stable wrt bug #504466
@@ -87,4 +90,3 @@
   26 Feb 2009; Bernard Cafarelli <voyageur@gentoo.org> +metadata.xml,
   +freepv-0.3.0_beta1.ebuild:
   Initial commit
-
