@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/qpitch
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/qpitch/ChangeLog,v 1.7 2013/03/02 22:01:06 hwoarang Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/qpitch/ChangeLog,v 1.8 2015/04/02 15:40:31 kensington Exp $
+
+*qpitch-1.0.1-r1 (02 Apr 2015)
+
+  02 Apr 2015; Michael Palimaka <kensington@gentoo.org> +qpitch-1.0.1-r1.ebuild:
+  EAPI bump.
 
   02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> qpitch-1.0.1.ebuild:
   Move Qt dependencies to the new category
