@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/taglib-extras
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/taglib-extras/ChangeLog,v 1.13 2014/09/23 13:34:33 kensington Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/taglib-extras/ChangeLog,v 1.14 2015/04/02 15:46:31 kensington Exp $
+
+*taglib-extras-1.0.1-r1 (02 Apr 2015)
+
+  02 Apr 2015; Michael Palimaka <kensington@gentoo.org>
+  +taglib-extras-1.0.1-r1.ebuild:
+  EAPI bump.
 
   23 Sep 2014; Michael Palimaka <kensington@gentoo.org>
   taglib-extras-1.0.1.ebuild:
